Fix generator scripts
- Add script to run all at the same time and we'll now run as pre-script for `build` & `test`
- Needed to create override tsconfig.json for scripts that changed some compiler options
- `gen-mock-etd-data` supports passing in the file name
- Using new `processSequentially` utility instead of `Promise.all` to ensure that we're not flooding the Bart API servers with requests all at once (which it couldn't handle)
- `fetchBartInfo` now has retry support
- `fetchJson` checks for status codes above 300 to throw rejection
- Fixed bug in salmon algorithm to use `hexcolor` instead of `color`

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ node_js:
 # Cache dependencies in $HOME/.yarn-cache across builds
 cache: npm
 
+# Generate all of the static data needed for salmon algorithms
+before_script: npm run gen:all
+
 # Run the the validate script
 script: npm test -- --coverage
 
