--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "humps": "^2.0.1",
     "lodash": "^4.17.13",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.3",
@@ -55,6 +55,7 @@
     "@types/redux-logger": "^3.0.7",
     "@types/webpack-env": "^1.14.0",
     "@types/xml2js": "^0.4.4",
+    "date-fns": "^1.30.1",
     "isomorphic-fetch": "^2.2.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
