--- a/.github/workflows/auto-generate-data.yml
+++ b/.github/workflows/auto-generate-data.yml
@@ -11,7 +11,7 @@ on:
       - auto-generate-data
 
 jobs:
-  build:
+  auto_generate_data:
     runs-on: ubuntu-latest
 
     steps:
@@ -28,7 +28,7 @@ jobs:
 
     # Generate all of the static data needed for salmon algorithms
     - name: Generate static data
-      run: npm run gen:all
+      run: npm run gen:stations
 
     - name: Commit updated files
       run: |
