--- a/.github/workflows/auto-generate-data.yml
+++ b/.github/workflows/auto-generate-data.yml
@@ -34,7 +34,9 @@ jobs:
       run: |
         git config --local user.email "bartsalmon@benmvp.com"
         git config --local user.name "Bart Salmon GitHub Action"
-        git commit -am "Update data from nightly cron"
+        git add -A
+        # Do nothing if there are no changes
+        git diff-index --quiet HEAD || git commit -m "Update data from nightly cron"
 
     - name: Push data to repo
       uses: ad-m/github-push-action@v0.5.0
