--- a/.github/workflows/auto-generate-data.yml
+++ b/.github/workflows/auto-generate-data.yml
@@ -6,10 +6,6 @@ on:
     # 7AM UTC is 11PM PST
     - cron: '* 7 * * *'
 
-  push:
-    branches:
-      - auto-generate-data
-
 jobs:
   auto_generate_data:
     runs-on: ubuntu-latest
@@ -28,7 +24,7 @@ jobs:
 
     # Generate all of the static data needed for salmon algorithms
     - name: Generate static data
-      run: npm run gen:routes
+      run: npm run gen:all
 
     - name: Commit updated files
       run: |
