--- a/.github/workflows/auto-generate-data.yml
+++ b/.github/workflows/auto-generate-data.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v1
 
-    - name: Setup Node v12
+    - name: Use Node v12
       uses: actions/setup-node@v1
       with:
         node-version: 12
