--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 
 jobs:
   test:
+    name: Test
     runs-on: ubuntu-latest
 
     steps:
@@ -16,7 +17,7 @@ jobs:
         node-version: 12
 
     - name: Install NPM dependencies
-      run: npm install
+      run: npm ci
 
     - name: Run unit tests w/ code coverage
       run: npm test -- --coverage
