--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/jest": "24.0.23",
     "@types/lodash": "^4.14.136",
     "@types/node": "12.12.14",
+    "@types/reach__router": "^1.2.6",
     "@types/react": "16.9.15",
     "@types/react-dom": "16.9.4",
     "@types/react-redux": "^7.1.1",
