--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "^4.5.0",
-    "@material-ui/icons": "^4.4.3",
-    "@material-ui/styles": "^4.5.0",
+    "@material-ui/core": "^4.7.2",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.7.1",
+    "@reach/router": "^1.2.1",
     "date-fns": "^2.6.0",
     "humps": "^2.0.1",
     "lodash": "^4.17.13",
@@ -52,6 +53,7 @@
     "@types/jest": "24.0.23",
     "@types/lodash": "^4.14.136",
     "@types/node": "12.12.14",
+    "@types/reach__router": "^1.2.6",
     "@types/react": "16.9.15",
     "@types/react-dom": "16.9.4",
     "@types/react-redux": "^7.1.1",
