--- a/package.json
+++ b/package.json
@@ -34,35 +34,34 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.7.1",
     "@reach/router": "^1.2.1",
-    "date-fns": "^2.6.0",
+    "date-fns": "^2.8.1",
     "humps": "^2.0.1",
-    "lodash": "^4.17.13",
-    "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-redux": "^7.1.0",
+    "lodash": "^4.17.15",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
-    "redux": "^4.0.3",
+    "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "typescript": "3.7.2",
+    "typescript": "^3.7.3",
     "url-lib": "^3.0.3"
   },
   "devDependencies": {
     "@types/humps": "^1.1.2",
-    "@types/jest": "24.0.23",
-    "@types/lodash": "^4.14.136",
+    "@types/jest": "^24.0.23",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.15",
     "@types/reach__router": "^1.2.6",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
-    "@types/react-redux": "^7.1.1",
+    "@types/react-redux": "^7.1.5",
     "@types/redux-logger": "^3.0.7",
-    "@types/webpack-env": "^1.14.0",
-    "@types/xml2js": "^0.4.4",
+    "@types/webpack-env": "^1.14.1",
+    "@types/xml2js": "^0.4.5",
     "isomorphic-fetch": "^2.2.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
-    "ts-node": "^8.3.0"
+    "ts-node": "^8.5.4"
   }
 }
