--- a/.github/workflows/auto-generate-data.yml
+++ b/.github/workflows/auto-generate-data.yml
@@ -5,6 +5,9 @@ on:
   schedule:
     # 7AM UTC is 11PM PST
     - cron: '0 7 * * *'
+  push:
+    branches:
+      - auto-generate-pr
 
 jobs:
   auto_generate_data:
@@ -27,21 +30,36 @@ jobs:
     - name: Generate static data
       run: npm run gen:all
 
-    # Run unit tests to make sure tests on mock data still pass
-    - name: Run unit tests
-      run: npm test
-      env:
-        CI: true
-
-    - name: Commit updated files
-      run: |
-        git config --local user.email "bartsalmon@benmvp.com"
-        git config --local user.name "Bart Salmon GitHub Action"
-        git add -A
-        # Do nothing if there are no changes
-        git diff-index --quiet HEAD || git commit -m "Update data from nightly cron"
-
-    - name: Push data to repo
-      uses: ad-m/github-push-action@v0.5.0
+    # Submit pull request for any updated data (if exists)
+    - name: Create PR with updated metadata
+      uses: peter-evans/create-pull-request@v1.9.1
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
+        commit-message: Update metadata from nightly cron
+        author-email: bart.salmon@users.noreply.github.com
+        author-name: Bart Salmon GitHub Action
+        title: 'Update metadata from nightly cron'
+        body: 'The nightly cron has auto-generated new metadata. Verify the changes and ensure that the tests still pass.'
+        labels: auto-generated-data
+        assignees: benmvp
+        branch: auto-generated-data
+        branch-suffix: none
+
+    # # Run unit tests to make sure tests on mock data still pass
+    # - name: Run unit tests
+    #   run: npm test
+    #   env:
+    #     CI: true
+
+    # - name: Commit updated files
+    #   run: |
+    #     git config --local user.email "bartsalmon@benmvp.com"
+    #     git config --local user.name "Bart Salmon GitHub Action"
+    #     git add -A
+    #     # Do nothing if there are no changes
+    #     git diff-index --quiet HEAD || git commit -m "Update data from nightly cron"
+
+    # - name: Push data to repo
+    #   uses: ad-m/github-push-action@v0.5.0
+    #   with:
+    #     github_token: ${{ secrets.GITHUB_TOKEN }}
